--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrasi Zeetasi Store</title>
+    <title>Registrasi sinzxco.fficial</title>
     <style>
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(-20px); }
